--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,5 @@
 header {
-  //   background-image: url('../../images/pattern-bg.png'); //set this for development
+  background-image: url('./../images/pattern-bg.png');
   background-size: cover;
   background-position: center;
   display: flex;
